<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">课表君</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="web_title">web</string>
    <string name="login_title">增删</string>
    <string name="opt_title">设置</string>
    <string name="title_activity_main1">MainActivity</string>
    <string name="title_activity_main">Main</string>
    
    <string name="user_login">用户登录</string>
    <string name="user">用户：</string>
    <string name="user_hint">请输入用户名</string>
    <string name="password">密码：</string>
    <string name="password_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string> 


</resources>
