<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#9999" >

    <ListView
        android:id="@+id/activity_timetable_list"
        android:layout_width="300dip"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginLeft="10dp"
        android:clipToPadding="false"
        android:divider="#9190"
        android:dividerHeight="20dip"
        android:fadingEdge="none"
        android:paddingTop="42dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:background="#09222222"
        android:gravity="center" >

        <Button
            android:id="@+id/activity_timetable_login_bt"
            style="@style/AppTheme"
            android:layout_width="88dp"
            android:layout_height="fill_parent"
            android:background="#00ffffff"
            android:text="@string/login_title" />

        <TextView
            android:id="@+id/activity_timetabble_week_bt"
            android:layout_width="140dip"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/web_title"
            android:textColor="#ffff"
            android:textSize="16dip" />

        
        <Button
            android:id="@+id/activity_timetable_opt_bt"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:background="#00ffffff"
            android:layout_height="fill_parent"
            android:text="@string/opt_title" />
    </LinearLayout>
    

</RelativeLayout>